Fix color on dark mode

--- a/natsumi-pages/modules/global.css
+++ b/natsumi-pages/modules/global.css
@@ -33,7 +33,11 @@ their author(s) have been provided above the used code.
   /*noinspection CssInvalidFunction*/
   @media (-moz-bool-pref: "natsumi.global.highlight-accent-color") {
     &::-moz-selection, &::selection {
-      background: light-dark(var(--natsumi-primary-color), color-mix(in srgb, var(--natsumi-colors-primary) 60%, white)) !important;
+      background: var(--natsumi-primary-color) !important;
+
+      @media (prefers-color-scheme: dark) {
+        background: color-mix(in srgb, var(--natsumi-colors-primary) 60%, white) !important;
+      }
     }
   }
 }
